--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   quickalert:
+  firebase_core: ^2.14.0
+  firebase_messaging: ^14.6.4
+  flutter_local_notifications: ^15.1.0+1
 
 dev_dependencies:
   flutter_test:
