--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_messaging: ^14.6.4
   flutter_local_notifications: ^15.1.0+1
+  flutter_native_timezone: ^2.0.0
+  timezone: ^0.9.2
+  workmanager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
