--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   timezone: ^0.9.2
   workmanager: ^0.5.1
+  accordion: ^2.5.1
 
 dev_dependencies:
   flutter_test:
