--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,7 @@ flutter:
   - assets/image/Sertifikasi.png
   - assets/image/Konsultasi.png
   - assets/image/Pelatihan.png
-  # - assets/image/profil.png
+  - assets/image/Profil.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
