--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   workmanager: ^0.5.1
   accordion: ^2.5.1
   url_launcher: ^6.1.12
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
