--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   accordion: ^2.5.1
   url_launcher: ^6.1.12
   flutter_staggered_grid_view: ^0.6.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
