--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   intl: ^0.18.1
   sqflite: ^2.2.8+4
   path: ^1.8.3
+  image_picker: ^1.0.1
+  image_cropper: ^5.0.0
 
 dev_dependencies:
   flutter_test:
