--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   path: ^1.8.3
   image_picker: ^1.0.1
   image_cropper: ^5.0.0
+  sqflite_common_ffi: ^2.3.0
+  sqflite_common_ffi_web: ^0.4.0
+  universal_html: ^2.2.3
 
 dev_dependencies:
   flutter_test:
