--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   image_picker: ^1.0.1
   image_cropper: ^5.0.0
   universal_html: ^2.2.3
+  permission_handler: ^10.4.3
 
 dev_dependencies:
   flutter_test:
