--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "inovasi_budaya" "\0"
+            VALUE "FileDescription", "eculture" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "inovasi_budaya" "\0"
+            VALUE "InternalName", "eculture" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "inovasi_budaya.exe" "\0"
-            VALUE "ProductName", "inovasi_budaya" "\0"
+            VALUE "ProductName", "eculture" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
